# stm32f3discovery

./: # Code Citations.md  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
